--- a/style.css
+++ b/style.css
@@ -1,66 +1,111 @@
-.body_content {
-    background-color: #2A2C2F;
+.body {
 
-    /*width: 100px;*/
-
-    height: 100px;
+    background-color: #000000;
+    width: 880px;
+    height: 1217px;
+    border: #000000;
 }
-.ul{
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 0px;
-}
-
 
 .page {
+
+    width: 320px;
+
     max-width: 1280px;
-    min-width: 320px;
-
-    /*border: 30px solid yellow;*/
-
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-
-    /* margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 20px;
-    border: 10px solid red;*/
-}
-
-
-
-.header_logo {
-    background-image: url('./img/logo.svg');
-    width: 176px;
-    height: 52px;
-
-    /*background-size: 176px 52px;*/
-
-}
-
-.header_lang {
-    color: rgb(243, 231, 217);
-}
-
-.lead {
-    width: 984px;
     margin: 0 auto;
 
 }
 
-.lead-title,
-.lead-subtinl,
-.lead-caption {
-    color: white;
-    margin-block-start: 0;
-    margin-block-end: 0;
+
+.header {
+
+    width: 950px;
+    height: 74px;
+    top: 45px;
+    left: 200px;
+
+    padding-top: 45px;
+    border-bottom-width: 1px;
+    /* Толщина линии внизу */
+    border-bottom-style: solid;
+    /* Стиль линии внизу */
+    border-bottom-color: white;
+    /* Цвет линии внизу */
+
+}
+
+
+.profile {
+
+   
+        width: 880px;
+        margin: 92px auto 0 auto;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 16px;
+        padding-block: 50px;
+        align-items: center;
+
+
+
+    /* width: 880px;
+    margin: 92px auto 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 16px;
+    padding-block: 50px; */
+
+}
+
+@media screen and (min-width: 320px) and (max-width: 880px) {
+    .photo-grid {
+
+
+        grid-template-columns: repeat(4, 1fr);
+
+
+    }
+}
+
+
+
+
+.profile__list-name{
+    color: #FFFFFF;
+    font-family: Inter;
+    font-size: 42px;
+    font-weight: 500;
+    line-height: 80px;
+    letter-spacing: 0em;
+    text-align: start;
+    list-style-type: none;
+
+
+
+}
+
+.button__edit {
+
+    width: 24px;
+    height: 24px;
+    /* top: 196px;
+    left: 662px;
+    /* border: 1px; */
+    background-color: transparent;
+    /* border-radius: 1px; */
+    border: 1px solid #FFFFFF;
+    background-color: transparent;
+
+}
+
+
+.profile__list-text {
+    color: #FFFFFF;
+    width: 336px;
+    height: 18px;
+    top: 236px;
+    left: 350px;
+
+    list-style-type: none;
 
 
 
@@ -68,106 +113,83 @@
 
 
 
-.lead-title {
 
-    /*font-family: Inter;*/
-    font-size: 96px;
+.button__edd {
+    width: 150px;
+    height: 50px;
+    top: 194px;
+    left: 930px;
+    border-radius: 2px;
+    border: 2px solid #FFFFFF;
+    /* border: medium none; */
+    background-color: transparent;
+
+}
+
+.elements {
+    width: 880px;
+    /* height: 744px; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-start: auto;
+    gap: 50px;
+
+
+
+
+
+}
+
+.elements__text {
+    color: black;
+    font-family: Inter;
+    font-size: 24px;
     font-weight: 900;
-    line-height: 100px;
+    line-height: 29px;
     letter-spacing: 0em;
-    text-align: center;
+    text-align: left;
+
 
 
 }
 
-.lead-subtinl {
-    /*font-family: Inter;*/
-    font-size: 30px;
+.elements__img {
+
+    background-color: white;
+    width: 22px;
+    height: 19px;
+    margin-top: 30px;
+
+
+}
+
+
+.elements__place {
+
+
+    display: flex;
+    justify-content: space-around;
+
+}
+
+
+.elements__color {
+    background-color: antiquewhite;
+}
+
+.footer {
+
+
+    width: 318px;
+    height: auto;
+
+    top: 1139px;
+    left: 200px;
+    font-family: Inter;
     font-weight: 400;
-    line-height: 36px;
-    letter-spacing: 0em;
-    text-align: center;
-
-    padding-top: 32px;
-    padding-bottom: 64px;
-
-
-
-}
-
-.lead-caption {
-
-    /*font-family: Inter;*/
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 14px;
-    letter-spacing: 1.5px;
-    text-align: left;
-
-    padding-top: 8px;
-
-
-}
-
-.intro-title {
-    /* font-family: Inter;*/
-    font-size: 54px;
-    font-weight: 900;
-    line-height: 58px;
+    line-height: 92x;
     letter-spacing: 0em;
     text-align: left;
-}
-
-.intro {
-    width: 690px;
-    margin: 92px auto 0px 148px;
-    
-}
-
-.intro-title {
-    /*font-family: Inter;*/
-    font-size: 54px;
-    font-weight: 900;
-    line-height: 58px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: white;
-
-}
-
-.intro-text {
-    /* font-family: Inter;*/
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: white;
-    width: 690px;
-
-}
-
-
-.intro-list
-{
-    /*  font-family: Inter;*/
-
-    
-font-size: 12px;
-font-weight: 400;
-line-height: 18px;
-letter-spacing: 0em;
-text-align: left;
-
-font-family: Inter;
-font-size: 12px;
-font-weight: 400;
-line-height: 18px;
-letter-spacing: 0em;
-text-align: left;
-color: white;
-list-style-type:none;
-
-
+    padding-block: 92px;
 
 }
